--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,6 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile "com.android.support:appcompat-v7:$rootProject.ext.supportLibraryVersion"
-//    compile project(':lib')
-    compile 'com.github.changshuai7:RulerView:1.0'
+    compile project(':lib')
+//    compile 'com.github.changshuai7:RulerView:1.0'
 }
